# whodunnit

./: .gitignore  CMakeLists.txt  README.md  STYLE.md  TODO.md  button.hpp  colors.hpp  compile.sh  main.cpp  rightclickmenu.hpp  run_tests.sh  tests.cpp  util.hpp  whodunnit.hpp
src/: button.hpp  colors.hpp  main.cpp  rightclickmenu.hpp  tests.cpp  util.hpp  whodunnit.hpp
